# c-physics

./: .gitignore  main.c  meson.build
modules/mesh_grid/: mesh_grid.c  mesh_grid.h
modules/open_gl/: open_gl.c  open_gl.h
